--- a/Algebraic Topology/main.tex
+++ b/Algebraic Topology/main.tex
@@ -18,7 +18,7 @@
 
 \subfile{Chapters/Basic Homology Algebra.tex}
 
-\subfile{Chapters/Basic Homology Algebra.tex}
+\subfile{Chapters/Singular Homology.tex}
 
 \amzindex
 
