--- a/Algebraic Topology/main.tex
+++ b/Algebraic Topology/main.tex
@@ -1,4 +1,9 @@
 \documentclass[math]{amznotes}
+
+\let\eth\relax
+\let\smallsetminus\relax
+\let\digamma\relax
+\let\backepsilon\relax
 %You can add "fastcompile" to the "\documentclass[]" to make compiling faster.
 \usepackage{lipsum}     % filler text
 %\usepackage{tikz-cd}
