--- a/Measure and Integration/amznotes.cls
+++ b/Measure and Integration/amznotes.cls
@@ -48,12 +48,19 @@
 \RequirePackage{tabularx}
 \RequirePackage{ctex}
 
-% ------------------------------------------
 
 \ifamznotes@math
     \RequirePackage{mathtools}          % for math macros; also loads amsmath
     \RequirePackage{amsthm}
-    \renewcommand\qedsymbol{$\squoval$}
+
+    \newenvironment{solution}[1][\solutionname]{%
+  \begin{proof}[#1]\renewcommand{\qedsymbol}{\(\lozenge\)}% % Use a diamond symbol
+}{%
+  \end{proof}%
+}
+
+
+    
     \RequirePackage{derivative}
 \fi
 
@@ -64,15 +71,16 @@
 
 % ------------------------------------------------------------
 % RENAME
+\newcommand{\solutionname}{Solution.}
 \newcommand{\proofsketchname}{Proof sketch}
 \renewcommand{\contentsname}{Contents}
 \renewcommand{\proofname}{Proof.}
 
 % ------------------------------------------------------------
 % FONTS
-\setCJKmainfont{华文中宋}[Scale = 1.2,BoldFont=Shanggu Round-Bold]
-\setCJKsansfont{华文中宋}[Scale = 1.2,BoldFont=Shanggu Round-Bold]
-\setCJKmonofont{华文中宋}[Scale = 1.2,BoldFont=Shanggu Round-Bold]
+\setCJKmainfont{华文中宋}[Scale = 1.2]
+\setCJKsansfont{华文中宋}[Scale = 1.2]
+\setCJKmonofont{华文中宋}[Scale = 1.2]
 \setmainfont{STIXTwoText}[
     Scale = 1.4, %放大了字体
   Extension = .otf,
